# loom

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: AGENT_ADAPTERS.md  AGENT_USAGE.md  CODEX_SKILL_VISIBILITY.md  LOCAL_SKILL_PATH_NOTES.md  LOOM_API_CONTRACT.md  LOOM_ARCHITECTURE_DECISIONS.md  LOOM_CLI_CONTRACT.md  LOOM_CLI_CONTRACT_OPERATIONS.md  LOOM_COMPLETE_GUIDE_ZH.md  LOOM_LEGACY_PRD.md  LOOM_LEGACY_STATE_SCHEMA.md  LOOM_STATE_FIXTURES.md  LOOM_STATE_MIGRATION_NOTES.md  LOOM_STATE_MODEL.md  LOOM_STATE_REVIEW.md  LOOM_TEST_PLAN.md  LOOM_V1_ACCEPTANCE.md  LOOM_V1_CORE_SPEC.md  LOOM_V2_PRD.md  LOOM_V2_STATE_SCHEMA.md  LOOM_V3_API_CONTRACT.md  LOOM_V3_ARCHITECTURE_DECISIONS.md  LOOM_V3_CLI_CONTRACT.md  LOOM_V3_MIGRATION.md  LOOM_V3_REVIEW.md  LOOM_V3_SPEC.md  LOOM_V3_STATE_FIXTURES.md  LOOM_V3_TEST_PLAN.md  MIGRATING_TO_ACTIVE_VIEW.md  RELEASING.md  SINGLE_SKILL_LIFECYCLE.md  SKILL_PROVIDER_BOUNDARY.md  STATUS_FIELD_CLASSIFICATION.md  SUPPORTED_AGENTS.md  UI_BACKLOG.md  agent-command-surfaces.toml  cli-contract-history.toml  module-ceiling-signal-report.md  pr-20-signal-report.md
docs/plan/: advanced-skill-ecosystem-todolist.md  codex-active-view-projection-spec.md  panel-design-repair-spec-2026-06-03.md  skill-control-plane-audit-2026-06-24.md  skill-diagnose-spec.md
docs/schemas/: agent-adapter-v1.schema.json  agent-adapter-v2.schema.json  agent-plan-v1.schema.json
panel/: client.test.ts  index.html  landing.html  package-lock.json  package.json  vite.config.ts
panel/src/: App.tsx  bun-test.d.ts  i18n.ts  landing-entry.tsx  panel-entry.tsx  styles.css  types.ts
scripts/: build-release.sh  demo.sh  e2e-agent-flow.sh  module-ceiling-allowlist.txt  module-ceiling-test.sh  module-ceiling.sh  perf-smoke.sh  release-contract.py  test-with-contract-trace.sh
skills/loom-registry/: SKILL.md  loom.skill.toml
specs/GH363/: product.md  tasks.md  tech.md
specs/GH364/: product.md  tasks.md  tech.md
specs/GH365/: product.md  tasks.md  tech.md
specs/GH366/: product.md  tasks.md  tech.md
specs/GH367/: product.md  tasks.md  tech.md
specs/GH368/: product.md  tasks.md  tech.md
specs/GH369/: product.md  tasks.md  tech.md
specs/GH370/: product.md  tasks.md  tech.md
specs/GH371/: product.md  tasks.md  tech.md
specs/GH372/: product.md  tasks.md  tech.md
specs/GH373/: product.md  tasks.md  tech.md
specs/GH374/: product.md  tasks.md  tech.md
specs/GH375/: product.md  tasks.md  tech.md
specs/GH376/: product.md  tasks.md  tech.md
specs/GH377/: product.md  tasks.md  tech.md
specs/GH378/: product.md  tasks.md  tech.md
specs/GH379/: product.md  tasks.md  tech.md
specs/GH380/: product.md  tasks.md  tech.md
specs/GH381/: product.md  tasks.md  tech.md
specs/GH382/: product.md  tasks.md  tech.md
specs/GH383/: product.md  tasks.md  tech.md
specs/GH384/: product.md  tasks.md  tech.md
specs/GH385/: product.md  tasks.md  tech.md
specs/GH386/: product.md  tasks.md  tech.md
specs/GH388/: product.md  tasks.md  tech.md
specs/GH389/: product.md  tasks.md  tech.md
specs/GH452/: product.md  tasks.md  tech.md
specs/GH453/: product.md  tasks.md  tech.md
src/: agent_adapters.rs  cli.rs  cli_contract.rs  commands.rs  envelope.rs  error_actions.rs  fs_util.rs  gemini_cli.rs  gitops.rs  lib.rs  main.rs  main_runtime.rs  next_action_trace.rs  panel.rs  sha256.rs  state.rs  types.rs  v3.rs
tests/: agent_contract_surfaces.rs  agent_plan_apply.rs  agent_preflight.rs  capture.rs  cli_surface.rs  codex_visibility.rs  convergence_status.rs  doctor.rs  gemini_cli_fidelity.rs  import_observed.rs  instruction_surfaces.rs  mcp_apply_review.rs  mcp_provisioning.rs  monitor_observed.rs  org_policy.rs  package_export.rs  project.rs  provider_cli.rs  provision_apply.rs  provision_cli.rs  provision_export_import.rs  provision_review_gates.rs  release_contract.rs  reliability.rs  remove.rs  rollback_compiled_projection_reconciliation.rs  rollback_noop_projection_reconciliation.rs  rollback_preview.rs  rollback_projection_reconciliation.rs  rollback_projection_snapshot_failures.rs  root_guard.rs  shipped_registry_skill.rs  single_skill_lifecycle_e2e.rs  skill_activation.rs  skill_authoring.rs  skill_commit.rs  skill_compile.rs  skill_compiled_activation.rs  skill_convergence.rs  skill_convergence_input_review.rs  (+33 more)
(+551 files in other folders)
