[package]
name = "skillloom"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
