[package]
name = "skillloom"
version = "0.1.4"
edition = "2024"
build = "build.rs"
description = "Git-backed skill manager and registry for AI coding agents"
license = "MIT"
repository = "https://github.com/majiayu000/loom"
homepage = "https://github.com/majiayu000/loom"
readme = "README.md"
keywords = ["agents", "skills", "registry", "git", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "/.claude/",
    "/.omx/",
    "/docs/artifacts/",
    "/panel/dist/",
    "/panel/node_modules/",
    "/skills/",
    "/state/",
    "/target/",
]

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.6.1", default-features = false, features = ["derive", "help", "std", "usage"] }
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
tar = { version = "0.4.44", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.52.3", default-features = false, features = ["io-util", "macros", "process", "rt"] }
ts-rs = { version = "12.0.1", default-features = false, features = ["chrono-impl"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
